--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-bootstrap": "*"
+        "php": ">=7.4.0",
+        "yiisoft/yii2": "~2.0.45",
+        "yiisoft/yii2-bootstrap5": "@dev",
+        "yiisoft/yii2-bootstrap4": "@dev"
     },
     "config": {
         "process-timeout": 1800
