--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dvizh/yii2-cart",
+    "name": "arturchel174/yii2-cart",
     "description": "yii2-cart it's a simple cart module to collect application models, that implement cart interface + widgets",
     "keywords": ["yii2", "yii 2", "application", "cart", "shop", "module", "dvizh"],
     "homepage": "https://github.com/dvizh/",
